k8s/overlays/prod/ingress-host-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: pipeops
spec:
  rules:
    - host: myapp.prod.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
              backend:
              service:
                name: myapp-clusterip
                port:
                  number: 5000
